# circle-simulation

./: .gitignore  CMakeLists.txt  circle-simulation.sln
circle-simulation/: ball.cpp  ball.h  circle-simulation.vcxproj  circle-simulation.vcxproj.filters  main.cpp
